# hyakutyping

./: Makefile.am  Makefile.in  README  aclocal.m4  config.h.in  configure  configure.in
src/: AccessProperty.cpp  AccessProperty.h  AccessRecordInterface.h  AccessRecordPC.cpp  AccessRecordPC.h  AccessRecordWeb.cpp  AccessRecordWeb.h  AccessSettings.cpp  AccessSettings.h  AnimationSurface.cpp  AnimationSurface.h  BaseEntity.cpp  BaseEntity.h  ButtonComponent.cpp  ButtonComponent.h  CdromPlayer.cpp  CdromPlayer.h  CheckBoxComponent.cpp  CheckBoxComponent.h  ColorSurface.cpp  ColorSurface.h  ComboBoxComponent.cpp  ComboBoxComponent.h  CommonResources.cpp  CommonResources.h  Component.cpp  Component.h  ComponentInterface.h  ComponentList.h  ConnectionInterface.h  ConsolePanelComponent.cpp  ConsolePanelComponent.h  CreateDirectory.cpp  CreateDirectory.h  CreateFileFromArray.cpp  CreateFileFromArray.h  CreateSurfaceFromArray.cpp  CreateSurfaceFromArray.h  CreateUser.cpp  CreateUser.h  (+207 more)
tools/: Makefile.am  Makefile.in  cdResourceCompile.rb
tools/createCdTrackList/: Makefile.am  Makefile.in  createCdTrackList.cpp  createCdTrackList.vcproj
tools/playTrack/: Makefile.am  Makefile.in  playTrack.cpp  playTrack.vcproj
vc8/: config.h  hyakutyping.vcproj
voicedata/: cd_makiidumi.txt  cd_tanakarie.txt  cd_wakamotonorio.txt  waka_makiidumi.txt  waka_tanakarie.txt  waka_wakamotonorio.txt
