## Makefile.am -- Process this file with automake to produce Makefile.in

noinst_PROGRAMS = createCdTrackList
AM_CXXFLAGS = -I${top_srcdir}/src
EXTRA_DIST = createCdTrackList.vcproj

createCdTrackList_SOURCES = createCdTrackList.cpp ../../src/CdromPlayer.cpp ../../src/SdlCdromInit.cpp ../../src/SdlInit.cpp ../../src/LogManager.cpp ../../src/LockGuard.cpp
