## Makefile.am -- Process this file with automake to produce Makefile.in

noinst_PROGRAMS = playTrack
AM_CXXFLAGS = -I${top_srcdir}/src
EXTRA_DIST = playTrack.vcproj

playTrack_SOURCES = playTrack.cpp ../../src/CdromPlayer.cpp ../../src/SdlCdromInit.cpp ../../src/SdlInit.cpp ../../src/LogManager.cpp ../../src/LockGuard.cpp
